samples/_failures_safe/1761727817_427cf6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46ac78a4.c: In function ‘main’:
./samples/SAFE/__tmp_46ac78a4.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
